2010-01-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Always start a new path with a moveto.
	Bug #2930705

2009-09-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (find_maxl_keys): Ignore key titles that may or may not
	have been read from an empty data file.
	Bug #2859699

2009-09-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (drawgraph): Make sure to update current position
	after drawing a polyline.
	Bug #2213362

	* src/graphics.c (boundary): If there is no colorbox, don't try to 
	assign tick positions for it.
	Bug #2822482

2009-09-03  Ethan A Merritt  <merritt@u.washington.edu>

	Release 4.2.6

2009-09-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_tic_prop):  When xtics (e.g.) were unset, then a new
	command 'set xtics ...' could lose track of the tic properties being set.
	Bug #2848433

2009-08-29  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Remove the EXPERIMENTAL flag from the x11 terminal
	binary polygon option.

	* share/LaTeX/Makefile.am:  Comment out an uninstall command because
	it breaks the build script.

	* NEWS PATCHLEVEL configure.in docs/titlepag.tex src/version.c:
	Update in preparation for release 4.2.6

2009-08-28  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Remove the EXPERIMENTAL flag from the wxt terminal

2009-08-13  anonymous 

	* term/tek.trm: Add support for xterm tektronix emulation

2009-07-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (store2d_point): If the plot uses palette colors taken
	from the Z coordinate, then also use Z to auto-scale cbrange.
	Bug #2133407

2009-07-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c: The "set view" command was incorrectly saved twice.
	Bug #2822433

2009-07-04  Thomas Sefzick <thse@users.sourceforge.net>

	* graphics.c (plot_boxes):  Minimal fix for off-by-one pixel bug in
	width of boxes with palette or rgb color.  Complete fix is in 4.4.